# acidni-mcp-portal

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/: __init__.py  auth.py  config.py  main.py  registry.py
src/routes/: __init__.py  api.py  keys.py  web.py
src/services/: __init__.py  cosmos_client.py  key_manager.py
src/static/css/: custom.css
src/templates/: base.html  dashboard.html  index.html  server_detail.html
